--- a/app/src/main/res/layout/activity_bet_game.xml
+++ b/app/src/main/res/layout/activity_bet_game.xml
@@ -9,36 +9,38 @@
 
     <TextView
         android:id="@+id/textViewHomeTeam"
-        android:layout_width="102dp"
-        android:layout_height="21dp"
-        android:text="TextView"
-        android:textStyle="bold"
+        android:layout_width="134dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="32dp"
         android:gravity="center"
-        android:layout_marginTop="33dp"
-        app:layout_constraintTop_toBottomOf="@+id/textViewHour"
-        app:layout_constraintLeft_toRightOf="@+id/imageViewHomeTeam"
-        android:layout_marginLeft="8dp" />
+        android:text="TextView"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewHomeTeam"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:id="@+id/textViewAwayTeam"
-        android:layout_width="102dp"
-        android:layout_height="21dp"
-        android:textStyle="bold"
+        android:layout_width="134dp"
+        android:layout_height="25dp"
         android:gravity="center"
         android:text="TextView"
-        app:layout_constraintRight_toLeftOf="@+id/imageViewAwayTeam"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="33dp"
-        app:layout_constraintTop_toBottomOf="@+id/textViewHour" />
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewAwayTeam"
+        android:layout_marginRight="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/buttonSaveBet"
-        android:layout_width="156dp"
-        android:layout_height="55dp"
+        android:layout_width="198dp"
+        android:layout_height="52dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:background="#3F51B4"
         android:text="Parier"
         android:textColor="#FFFFFF"
@@ -46,76 +48,68 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/numberPickerHome"
-        app:layout_constraintVertical_bias="0.281" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textViewHour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="26dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="26dp"
+        android:text="TextView"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageViewHomeTeam"
-        android:layout_width="49dp"
-        android:layout_height="43dp"
+        android:layout_width="75dp"
+        android:layout_height="70dp"
         app:srcCompat="@drawable/angers"
-        android:layout_marginBottom="49dp"
-        app:layout_constraintBottom_toTopOf="@+id/numberPickerHome"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintVertical_bias="1.0"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginLeft="47dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="28dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewHour" />
 
     <ImageView
         android:id="@+id/imageViewAwayTeam"
-        android:layout_width="49dp"
-        android:layout_height="43dp"
+        android:layout_width="75dp"
+        android:layout_height="70dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginRight="47dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.09"
-        app:srcCompat="@drawable/amiens" />
+        app:srcCompat="@drawable/amiens"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewHour"
+        app:layout_constraintVertical_bias="0.046" />
 
     <biz.borealis.numberpicker.NumberPicker
         android:id="@+id/numberPickerHome"
-        android:layout_width="128dp"
-        android:layout_height="271dp"
-        android:layout_marginLeft="26dp"
-        android:layout_marginTop="49dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_width="119dp"
+        android:layout_height="249dp"
+        android:layout_marginTop="33dp"
+
         app:layout_constraintTop_toBottomOf="@+id/textViewHomeTeam"
         app:np_max_number="10"
-
-        app:layout_constraintRight_toLeftOf="@+id/numberPickerAway"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.115" />
+        android:layout_marginLeft="31dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <biz.borealis.numberpicker.NumberPicker
 
         android:id="@+id/numberPickerAway"
-        android:layout_width="128dp"
-        android:layout_height="271dp"
-        android:layout_marginRight="45dp"
-        android:layout_marginTop="51dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewAwayTeam"
+        android:layout_width="119dp"
+        android:layout_height="249dp"
         app:np_fade_text_color="true"
         app:np_max_number="10"
         app:np_text_color_selected="#ff5959"
         app:np_text_size_selected="40sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_marginTop="33dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewAwayTeam"
+        android:layout_marginRight="31dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
