--- a/app/src/main/res/layout/activity_enter_score.xml
+++ b/app/src/main/res/layout/activity_enter_score.xml
@@ -38,7 +38,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
-        android:layout_marginTop="58dp"
+        android:layout_marginTop="38dp"
         app:layout_constraintTop_toBottomOf="@+id/textViewHomeScore"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
@@ -86,7 +86,7 @@
         android:text="Changer l'horaire"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:layout_constraintHorizontal_bias="0.504"
         android:layout_marginStart="8dp"
@@ -98,19 +98,21 @@
         android:layout_height="57dp"
         android:background="@drawable/bouton"
         android:text="Supprimer la rencontre"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/textView5"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintVertical_bias="0.476" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="- ou - "
-        android:layout_marginTop="26dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/buttonUpload"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
@@ -120,7 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="- ou -"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/buttonChangeHoraire"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
