--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -3,33 +3,33 @@
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
-android:background="@drawable/topbar"
+android:background="@drawable/bartop"
 xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <!-- This could be your fragment container, or something -->
 
 
-<FrameLayout
-    android:id="@+id/frame_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_above="@+id/bottomBar"
-    android:layout_below="@+id/imageViewSettings"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentEnd="true" />
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/imageViewSettings" />
 
-<ImageView
-    android:id="@+id/imageViewSettings"
-    android:layout_width="53dp"
-    android:layout_height="47dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_marginTop="0dp"
-    app:layout_constraintHorizontal_bias="1.0"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:srcCompat="@drawable/profiletest" />
+    <ImageView
+        android:id="@+id/imageViewSettings"
+        android:layout_width="53dp"
+        android:layout_height="47dp"
+        android:layout_marginBottom="14dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ecrou" />
 
 <com.roughike.bottombar.BottomBar
     android:id="@+id/bottomBar"
