--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -3,28 +3,29 @@
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
-android:background="@drawable/bartop"
+android:background="@drawable/topbar"
 xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <!-- This could be your fragment container, or something -->
 
 
-    <FrameLayout
-        android:id="@+id/frame_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/imageViewSettings" />
+<FrameLayout
+    android:id="@+id/frame_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_above="@+id/bottomBar"
+    android:layout_below="@+id/imageViewSettings"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true" />
 
     <ImageView
         android:id="@+id/imageViewSettings"
-        android:layout_width="38dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="12dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginBottom="25dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -35,9 +36,9 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
     android:id="@+id/bottomBar"
     android:layout_width="match_parent"
     android:layout_height="60dp"
+    app:bb_behavior="shifting"
     android:layout_alignParentBottom="true"
     app:bb_tabXmlResource="@xml/bottombar_tabs_color_changing"
-
     app:bb_inActiveTabColor="#3F51B4"
     app:bb_activeTabColor="#3F51B4"
     />
