--- a/app/src/main/res/layout/activity_bet_game.xml
+++ b/app/src/main/res/layout/activity_bet_game.xml
@@ -4,112 +4,154 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mathieu.parissportifs.BetGame"
-    android:background="@color/white">
+    tools:context="com.example.mathieu.parissportifs.BetGame">
 
     <TextView
         android:id="@+id/textViewHomeTeam"
-        android:layout_width="134dp"
-        android:layout_height="25dp"
-        android:layout_marginTop="32dp"
-        android:gravity="center"
+        android:layout_width="102dp"
+        android:layout_height="21dp"
         android:text="TextView"
-        android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewHomeTeam"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:gravity="center"
+        android:layout_marginTop="33dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewHour"
+        app:layout_constraintRight_toLeftOf="@+id/textViewAwayTeam"
+        android:layout_marginRight="40dp" />
 
     <TextView
         android:id="@+id/textViewAwayTeam"
-        android:layout_width="134dp"
-        android:layout_height="25dp"
+        android:layout_width="102dp"
+        android:layout_height="21dp"
+        android:textStyle="bold"
         android:gravity="center"
         android:text="TextView"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewAwayTeam"
-        android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toLeftOf="@+id/imageViewAwayTeam"
+        android:layout_marginRight="4dp"
+        android:layout_marginTop="33dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewHour" />
 
     <Button
         android:id="@+id/buttonSaveBet"
-        android:layout_width="198dp"
-        android:layout_height="52dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:background="#3F51B4"
-        android:text="Parier"
-        android:textColor="#FFFFFF"
+        android:background="@drawable/bouton"
+        android:text="Pronostiquer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/numberPickerHome"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
         android:id="@+id/textViewHour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textStyle="bold"
+        android:layout_marginRight="163dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="33dp" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="26dp"
-        android:text="TextView"
-        android:textSize="18sp"
+        android:text="Ton pronostique : "
         android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.441"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/numberPickerHome" />
+
+    <TextView
+        android:id="@+id/tvprevbetaway"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="TextView"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.14"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <TextView
+        android:id="@+id/tvprevbethome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="TextView"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.831"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <ImageView
         android:id="@+id/imageViewHomeTeam"
-        android:layout_width="75dp"
-        android:layout_height="70dp"
+        android:layout_width="41dp"
+        android:layout_height="29dp"
         app:srcCompat="@drawable/angers"
-        android:layout_marginLeft="47dp"
+        app:layout_constraintRight_toLeftOf="@+id/textViewHomeTeam"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="49dp"
+        app:layout_constraintBottom_toTopOf="@+id/numberPickerHome"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="28dp"
+        app:layout_constraintHorizontal_bias="0.666"
+        android:layout_marginTop="25dp"
         app:layout_constraintTop_toBottomOf="@+id/textViewHour" />
 
     <ImageView
         android:id="@+id/imageViewAwayTeam"
-        android:layout_width="75dp"
-        android:layout_height="70dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="47dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="41dp"
+        android:layout_height="29dp"
         app:srcCompat="@drawable/amiens"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textViewHour"
-        app:layout_constraintVertical_bias="0.046" />
+        android:layout_marginRight="4dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/textViewHour" />
 
     <biz.borealis.numberpicker.NumberPicker
         android:id="@+id/numberPickerHome"
-        android:layout_width="119dp"
-        android:layout_height="249dp"
-        android:layout_marginTop="33dp"
-
+        android:layout_width="128dp"
+        android:layout_height="271dp"
+        android:layout_marginLeft="26dp"
+        android:layout_marginTop="49dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewHomeTeam"
         app:np_max_number="10"
-        android:layout_marginLeft="31dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+
+        app:layout_constraintRight_toLeftOf="@+id/numberPickerAway"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.115" />
 
     <biz.borealis.numberpicker.NumberPicker
 
         android:id="@+id/numberPickerAway"
-        android:layout_width="119dp"
-        android:layout_height="249dp"
+        android:layout_width="128dp"
+        android:layout_height="271dp"
+        android:layout_marginRight="45dp"
+        android:layout_marginTop="51dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewAwayTeam"
         app:np_fade_text_color="true"
         app:np_max_number="10"
         app:np_text_color_selected="#ff5959"
         app:np_text_size_selected="40sp"
-        android:layout_marginTop="33dp"
-        app:layout_constraintTop_toBottomOf="@+id/textViewAwayTeam"
-        android:layout_marginRight="31dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
