--- a/app/src/main/res/layout/challenge_items.xml
+++ b/app/src/main/res/layout/challenge_items.xml
@@ -48,12 +48,12 @@
         android:id="@+id/textView7"
         android:layout_width="65dp"
         android:layout_height="26dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="26dp"
-        android:text="points"
+        android:text="pts"
         android:textSize="18dp"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/textViewChampionShipName"
-        android:layout_marginLeft="0dp" /><![CDATA[
+        app:layout_constraintTop_toTopOf="parent" /><![CDATA[
 
 
         app:layout_constraintLeft_toRightOf="@+id/textViewPlayerRank"
