--- a/app/src/main/res/layout/contact_list_competition_created.xml
+++ b/app/src/main/res/layout/contact_list_competition_created.xml
@@ -6,13 +6,14 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
-        android:text="TextView"
         android:layout_alignParentTop="true"
+        android:layout_marginEnd="56dp"
+        android:layout_marginRight="56dp"
+        android:layout_marginTop="23dp"
         android:layout_toLeftOf="@+id/textView2"
         android:layout_toStartOf="@+id/textView2"
-        android:layout_marginRight="56dp"
-        android:layout_marginEnd="56dp" />
+        android:text="TextView"
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/textView2"
