--- a/app/src/main/res/layout/challenge_items.xml
+++ b/app/src/main/res/layout/challenge_items.xml
@@ -42,7 +42,7 @@
         android:textSize="18dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/textViewNameCompetition"
-        android:layout_marginLeft="76dp" />
+        android:layout_marginLeft="63dp" />
 
     <TextView
         android:id="@+id/textView7"
@@ -51,9 +51,10 @@
         android:layout_marginTop="26dp"
         android:text="pts"
         android:textSize="17dp"
+        android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/textViewChampionShipName"
-        android:layout_marginLeft="11dp" /><![CDATA[
+        android:layout_marginLeft="10dp" /><![CDATA[
 
 
         app:layout_constraintLeft_toRightOf="@+id/textViewPlayerRank"
