--- a/app/src/main/res/layout/competitions_list_items.xml
+++ b/app/src/main/res/layout/competitions_list_items.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <com.daimajia.swipe.SwipeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -9,7 +10,6 @@
         android:tag="Bottom2"
         android:layout_width="160dp"
         android:layout_height="match_parent">
-
         <Button
             android:id="@+id/removeCompetition"
             android:layout_width="match_parent"
@@ -30,14 +30,15 @@
             android:id="@+id/textView9"
             android:layout_width="wrap_content"
             android:layout_height="23dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginRight="37dp"
+            android:layout_marginTop="20dp"
             android:text="pts"
-            android:textColor="@color/greyList"
             android:textSize="16sp"
             android:textStyle="bold"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginRight="36dp"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintLeft_toRightOf="@+id/textViewPoints"
+            android:layout_marginLeft="4dp" />
 
 
         <ImageView
@@ -45,19 +46,19 @@
             android:layout_width="56dp"
             android:layout_height="50dp"
             android:background="@drawable/france"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="26dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="27dp" />
+            android:layout_marginTop="20dp" />
 
         <TextView
             android:id="@+id/championshipName"
             android:layout_width="100dp"
             android:layout_height="23dp"
-            android:layout_marginLeft="29dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="41dp"
+            android:layout_marginTop="20dp"
             android:text="TextView"
-            android:textColor="#000000"
+            android:textColor="@color/greyList"
             app:layout_constraintLeft_toRightOf="@+id/ivCaptain"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -66,11 +67,12 @@
             android:layout_width="217dp"
             android:layout_height="25dp"
             android:layout_marginBottom="13dp"
-            android:layout_marginLeft="29dp"
+            android:layout_marginLeft="41dp"
             android:layout_marginTop="16dp"
             android:text="TextView"
             android:textSize="20dp"
-            android:textColor="#000000"
+            android:textColor="@color/greyList"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/ivCaptain"
             app:layout_constraintTop_toBottomOf="@+id/championshipName"
@@ -80,14 +82,13 @@
             android:id="@+id/textViewPoints"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="57dp"
+            android:layout_marginTop="20dp"
             android:text="200"
             android:textColor="@color/red"
             android:textSize="18sp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/championshipName"
-            android:layout_marginLeft="87dp"
-            app:layout_constraintRight_toLeftOf="@+id/textView9"
-            android:layout_marginRight="8dp" />
+            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
+
 </com.daimajia.swipe.SwipeLayout>
