--- a/app/src/main/res/layout/activity_bet_game.xml
+++ b/app/src/main/res/layout/activity_bet_game.xml
@@ -76,12 +76,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:text="TextView"
+        android:layout_marginTop="8dp"
+        android:text="0"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.14"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <TextView
@@ -90,12 +90,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:text="TextView"
+        android:layout_marginTop="8dp"
+        android:text="0"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.831"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <ImageView
@@ -105,8 +105,6 @@
         app:srcCompat="@drawable/angers"
         app:layout_constraintRight_toLeftOf="@+id/textViewHomeTeam"
         android:layout_marginRight="0dp"
-        android:layout_marginBottom="49dp"
-        app:layout_constraintBottom_toTopOf="@+id/numberPickerHome"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="0.666"
@@ -143,7 +141,7 @@
         android:layout_width="128dp"
         android:layout_height="271dp"
         android:layout_marginRight="45dp"
-        android:layout_marginTop="51dp"
+        android:layout_marginTop="49dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewAwayTeam"
         app:np_fade_text_color="true"
