--- a/app/src/main/res/layout/fragment_super_user_calendar.xml
+++ b/app/src/main/res/layout/fragment_super_user_calendar.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/superUserCalendar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
+                android:background="#4B64EF"
                 app:textColorSelected="#FFFF"
                 app:textSizeDayName="14sp"
                 app:textSizeDayNumber="20sp"/>
