--- a/app/src/main/res/layout/fragment_home_competition.xml
+++ b/app/src/main/res/layout/fragment_home_competition.xml
@@ -13,60 +13,55 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="70dp"
             android:layout_gravity="top"
             android:background="@drawable/topba">
 
             <TextView
                 android:id="@+id/competitionName"
                 android:layout_width="wrap_content"
-                android:layout_height="29dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="8dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="26dp"
                 android:text="TextView"
                 android:textColor="@color/greyList"
                 android:textSize="20dp"
                 android:textStyle="bold"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewLigue1"
-                app:layout_constraintVertical_bias="1.0" />
+                android:layout_marginBottom="8dp"
+                app:layout_constraintLeft_toRightOf="@+id/imageView3"
+                android:layout_marginLeft="37dp" />
 
             <ImageView
                 android:id="@+id/imageView3"
-                android:layout_width="61dp"
-                android:layout_height="46dp"
-                android:layout_marginBottom="39dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.666"
+                android:layout_width="42dp"
+                android:layout_height="31dp"
+                app:srcCompat="@drawable/france"
+                android:layout_marginLeft="16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@+id/textViewLigue1"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="1.0"
-                app:srcCompat="@drawable/france" />
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/textViewLigue1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintVertical_bias="1.0" />
 
             <TextView
                 android:id="@+id/textViewLigue1"
                 android:layout_width="wrap_content"
-                android:layout_height="27dp"
-                android:layout_marginRight="228dp"
-                android:layout_marginTop="16dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="17dp"
+                android:layout_marginTop="2dp"
                 android:gravity="center"
                 android:text="textTest"
                 android:textColor="@color/greyList"
                 android:textSize="17dp"
-                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginRight="8dp"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintHorizontal_bias="0.0" />
         </android.support.constraint.ConstraintLayout>
 
         <ListView
